--- a/FinalProject/app/build.gradle
+++ b/FinalProject/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.roughike:bottom-bar:2.3.1'
     testCompile 'junit:junit:4.12'
+    compile files('src/main/resources/simple-xml-2.7.1.jar')
 }
