--- a/FinalProject/app/build.gradle
+++ b/FinalProject/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'realm-android'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
@@ -27,9 +27,11 @@ dependencies {
     compile files('src/main/resources/simple-xml-2.7.1.jar')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.android.gms:play-services-maps:11.0.1'
+    compile 'com.google.android.gms:play-services-maps:11.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.roughike:bottom-bar:2.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.daimajia.swipelayout:library:1.2.0@aar'
     testCompile 'junit:junit:4.12'
 }
